:bug: fix markers on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,9 @@ button:active {
 .leaflet-control-container {
   visibility: hidden;
 }
+
+.leaflet-marker-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
